--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                     </header>
                     
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                        <article class="bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300 hover:-translate-y-3 hover:shadow-xl">
-                            <div class="p-6">
-                                <h4 class="text-xl mb-3 text-gray-900 font-semibold">Guía 1: Introducción a Tailwind CSS</h4>
-                                <p class="text-gray-600 leading-relaxed mb-4">
+                        <article class="bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300 hover:-translate-y-3 hover:shadow-xl flex flex-col h-full">
+                            <div class="p-6 flex flex-col h-full">
+                                <h4 class="text-xl mb-3 text-gray-900 font-semibold text-center">Guía 1: Introducción a Tailwind CSS</h4>
+                                <p class="text-gray-600 leading-relaxed mb-4 flex-1">
                                     Se identificó cómo usar las clases utilitarias de Tailwind CSS para estilizar componentes rápidamente,
                                     se crearon diseños responsivos y se personalizalizaron configuraciones básicas en proyectos con Tailwind CSS
                                 </p>
@@ -71,6 +71,19 @@
                                     <a href="Guia1_20245476/login/login.html" class="text-accent text-sm font-medium py-1 border-b border-transparent text-center hover:border-gray-600 transition-colors">Formulario de inicio de sesión</a>
                                     <a href="Guia1_20245476/clipboard/index.html" class="text-accent text-sm font-medium py-1 border-b border-transparent text-center hover:border-gray-600 transition-colors">Clipboard landing page</a>
                                     <a href="Guia1_20245476/coldplay/coldplay.html" class="text-accent text-sm font-medium py-1 border-b border-transparent text-center hover:border-gray-600 transition-colors">Ejercicio: Página para Coldplay</a>
+                                </nav>
+                            </div>
+                        </article>
+
+                        <article class="bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300 hover:-translate-y-3 hover:shadow-xl flex flex-col h-full">
+                            <div class="p-6 flex flex-col h-full">
+                                <h4 class="text-xl mb-3 text-gray-900 font-semibold text-center">Práctica 2: Fundamentos de React</h4>
+                                <p class="text-gray-600 leading-relaxed mb-4">
+                                    La asignación comprende el desarrollo de la práctica de los videos y los ejercicios complementarios asignados 
+                                    (respecto al funcionamiento de los botones del carrito de compra)
+                                </p>
+                                <nav class="flex flex-col gap-2">
+                                    <a href="https://tranquil-starship-fe4917.netlify.app" class="text-accent text-sm font-medium py-1 border-b border-transparent text-center hover:border-gray-600 transition-colors">Carrito de compras</a>
                                 </nav>
                             </div>
                         </article>
